--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -301,7 +301,7 @@ a {
 /* -------------------- ------------- -------------------- */
 #intro {
 	position:fixed;
-	background:#0A0A0A url("img/") no-repeat center center;
+	background:#0A0A0A url(/assets/img/DSC_0132.JPG) no-repeat center center;
 	background-size:cover;
 }
 #logo {
@@ -311,10 +311,6 @@ a {
 	top:0px;
 	left:0px;
 	background-color:rgba(0,0,0,0.88);
-	-webkit-box-shadow:0px 0px 55px 40px rgba(0,0,0,0.88);
-	-moz-box-shadow:0px 0px 55px 40px rgba(0,0,0,0.88);
-	-o-box-shadow:0px 0px 55px 40px rgba(0,0,0,0.88);
-	box-shadow:0px 0px 55px 40px rgba(0,0,0,0.88);
 	-webkit-transition:top 1.5s, box-shadow 1.5s, background-color 1.5s, margin 1.5s;
 	transition:top 1.5s, box-shadow 1.5s, background-color 1.5s, margin 1.5s;
 }
@@ -381,7 +377,7 @@ a {
 /* -------------------- Page Classes and Ids -------------------- */
 /* -------------------- -------------------- -------------------- */
 #page1 {
-	background:#0A0A0A url(img/ETH_ASL_YuMi.jpg) no-repeat center center;
+	background:#0A0A0A url(img/DSC_0132.jpg) no-repeat center center;
 }
 #page2 {
 	background:#0A0A0A url(img/ETH_ASL_Tint.png) no-repeat center center;
