--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -155,6 +155,8 @@ html, body, main {
 	height:100%;
 	width:100%;
 	overflow:hidden;
+	/* allow JS to manage touch scrolling/swipes */
+	touch-action: pan-y;
 }
 html, body, main, div, section, img, h1 {
 	z-index:0;
@@ -413,6 +415,7 @@ a {
 	height:100%;
 	width:100%;
 	-webkit-backface-visibility:hidden;
+	backface-visibility:hidden;
 }
 #contentPage1, #contentPage2, #contentPage3, #contentPage4 {
 	position:relative;
@@ -423,9 +426,10 @@ a {
 .page {
 	position:absolute;
 	top:0;
+	left:0;
 	text-align:center;
-	-webkit-transition:left 1.5s;
-	transition:left 1.5s;
+	-webkit-transition:top 1.5s;
+	transition:top 1.5s;
 }
 .linksBar {
 	position:absolute;
@@ -719,13 +723,13 @@ a {
 /* -------------------- Form -------------------- */
 /* -------------------- ---- -------------------- */
 form {
-    margin:10px auto;
-    max-width:308px;
-    text-align:center;
+	margin:10px auto;
+	max-width:308px;
+	text-align:center;
 }
 input, textarea {
 	float:none;
-	margin:5px; auto;
+	margin:5px auto;
 	padding:4px;
 	width:100%;
 	max-width:300px;
@@ -757,4 +761,4 @@ input:focus {
 	-moz-box-shadow:inset 0px 0px 5px #0A0A0A;
 	-o-box-shadow:inset 0px 0px 5px #0A0A0A;
 	box-shadow:inset 0px 0px 5px #0A0A0A;
-
+}
